@@ -14,6 +14,7 @@ Attachments are now processed in the order they were attached.
 * Fixed bug in "reset settings to default" where the protocol wasn't being retained.
 * More cleanup and clarification on settings screen.
 * Fixed bug where excerpts weren't getting set if "Filter newlines" was set to "Yes"
+* Removed logic to increase memory size.
 
 = 1.4.27 (2013.01.17) =
 * Updated sample plugin for extending Postie.
